gcc/testsuite/rust/rustc/ui/union/unnamed-fields/anon-struct-in-enum-issue-121446.rs
#![crate_type = "lib"]
#![feature(unnamed_fields)]
#![allow(unused, incomplete_features)]

enum K {
    M {
        _ : struct { field: u8 },
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
    }
}

